fix(excel-ingestion): return a named error code on campaign boundary mismatch
Editing boundaries in a downloaded template failed with only a generic
"invalid" status and an error count - additionalDetails carried no errorCode
or errorMessage, so process/_search never said what was wrong.

validateCampaignBoundaries now throws instead of collecting sheet errors,
reusing the existing localisation keys as error codes. AsyncProcessingService
records status=failed with the code and message on additionalDetails, which
the console already renders. No frontend change, and HTTP status is
unaffected - validation runs async after the controller returns 202.

HCMPRE-4496